Fix display on mobile firefox and safari?

--- a/src/views/templates/wifi/contact.scss
+++ b/src/views/templates/wifi/contact.scss
@@ -4,7 +4,7 @@ $color2: #de1444;
 
 .contact-form {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     margin: 1rem;
     padding: 0 1rem 1rem 1rem;
     background-color: white;
@@ -61,6 +61,9 @@ $color2: #de1444;
     &__message {
         min-height: 8ch;
         margin: 0 0.5em 0.5em;
+        // for some reason margin doesn't work correctly
+        // on the right side on some mobile browsers
+        width: calc(100% - 1.5rem);
         border: 1px solid #bbb;
         border-radius: 5px;
         //box-shadow: inset 0 2px 3px rgba($color: #000000, $alpha: 0.2);
